--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,6 +9,7 @@
   width: 100%;
   margin: 0 auto;
   padding: 0 2rem;
+  box-sizing: border-box;
 }
 
 .footer-content {
